--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "parcel-sandbox",
+  "name": "react-focuslostbox",
   "version": "1.0.0",
-  "description": "Simple Parcel Sandbox",
+  "description": "A tiny component that fires an callback when focus completely leaves the container.",
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build src/index.html"
   },
   "dependencies": {
+    "prop-types": "15.7.2",
     "react": "16.11.0",
     "react-dom": "16.11.0"
   },
   "devDependencies": {
     "parcel-bundler": "^1.6.1"
-  }
+  },
+  "keywords": []
 }
