Refactor for testing/readability. Refine example and messaging

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-focusarea",
   "version": "1.0.0",
   "description": "A tiny component that fires an callback when focus completely leaves the container.",
-  "main": "src/examples/index.html",
+  "main": "src/lib/index.jsx",
   "scripts": {
     "start": "parcel src/examples/index.html --open",
     "build": "parcel build src/lib/index.jsx"
