--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "src/lib/index.jsx",
   "scripts": {
     "start": "parcel src/examples/index.html --open",
-    "build": "parcel build src/lib/index.jsx"
+    "build": "parcel build src/lib/index.jsx",
+    "test": "jest"
   },
   "dependencies": {
-    "prop-types": "15.7.2",
-    "react": "16.11.0",
-    "react-dom": "16.11.0"
+    "prop-types": "^15.7.2",
+    "react": "^16.8",
+    "react-dom": "^16.8"
   },
   "devDependencies": {
+    "jest": "24.9.0",
+    "babel-jest": "24.9.0",
     "parcel-bundler": "^1.6.1"
   },
   "keywords": []
