--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "build": "parcel build src/lib/index.js",
     "test": "jest"
   },
-  "dependencies": {
+  "peerDependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.8",
     "react-dom": "^16.8"
   },
   "devDependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^16.8",
+    "react-dom": "^16.8",
     "jest": "24.9.0",
     "babel-jest": "24.9.0",
     "parcel-bundler": "^1.6.1"
