A little cleanup to package and gitignore

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-focusarea",
+  "name": "@slobaum/react-focusarea",
   "version": "1.0.0",
   "description": "A tiny component that fires an callback when focus completely leaves the container.",
   "main": "src/lib/index.js",
@@ -21,5 +21,16 @@
     "babel-jest": "24.9.0",
     "parcel-bundler": "^1.6.1"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/slobaum/react-focusarea.git"
+  },
+  "author": "slobaum",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/slobaum/react-focusarea/issues"
+  },
+  "homepage": "https://github.com/slobaum/react-focusarea#readme"
 }
