--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@slobaum/react-focusarea",
+  "name": "react-focusarea",
   "version": "1.0.0",
   "description": "A tiny component that fires an callback when focus completely leaves the container.",
   "main": "src/lib/index.js",
