--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": [
     "react",
+    "es2015",
     "env"
   ],
   "plugins": [
@@ -11,7 +12,12 @@
         "regenerator": true
       }
     ],
-    "transform-object-rest-spread",
+    [
+      "transform-object-rest-spread",
+      {
+        "useBuiltIns": true 
+      }
+    ],
     [
       "transform-react-jsx",
       {
