--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "babel-plugin-transform-react-jsx": "~6.24.1",
     "babel-plugin-transform-runtime": "~6.23.0",
     "babel-preset-env": "~1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "~6.24.1",
     "jest": "24.9.0",
-    "parcel-bundler": "~1.6.1",
+    "parcel-bundler": "~1.12.4",
     "prop-types": "~15.7.2",
     "react": "~16.8",
     "react-dom": "~16.8"
